--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "@vinejs/vine": "^2.1.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.4"
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.3.0",
+    "@types/node-cron": "^3.0.11",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
