--- a/package.json
+++ b/package.json
@@ -19,13 +19,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemon": "^3.1.4"
-    "cloudinary": "^2.4.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "zod": "^3.23.8"
