--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "@vinejs/vine": "^2.1.0",
+    "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^3.0.3",
-    "socket.io": "^4.7.5",
-    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
