--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only app.ts",
+    "dev-seed": "ts-node-dev --respawn --transpile-only seed.ts",
     "build": "tsc"
   },
   "author": "",
@@ -13,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "@vinejs/vine": "^2.1.0",
+    "arg": "^5.0.2",
     "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
@@ -25,6 +27,7 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5",
+    "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -36,7 +39,6 @@
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
     "prisma": "^5.18.0",
-    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
   }
