--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "pdfkit": "^0.15.0",
     "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
     "zod": "^3.23.8"
@@ -38,6 +39,7 @@
     "@types/node": "^22.3.0",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.15",
+    "@types/pdfkit": "^0.13.4",
     "prisma": "^5.18.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
